tests/compilefail54.out
[1mtests/compilefail54.pas:9:14: [0m[1m[91merror:[0m Invalid subrange - value 5 is not less than or equal to value 2
     9 | 	oopsie = 5..2;